--- a/dev/tiddlers/$__plugins_bangyou_tw-gantt_style_gantt.css
+++ b/dev/tiddlers/$__plugins_bangyou_tw-gantt_style_gantt.css
@@ -7,7 +7,7 @@
     padding: 20px;
 }
 
-.gantt-years {
+.gantt-labels {
     display: flex;
     position: relative;
     border-bottom: 1px solid #ccc;
@@ -15,8 +15,7 @@
     width: 100%
 }
 
-/* Year Labels with Single Color */
-.gantt-year {
+.gantt-label {
     flex: 1;
     text-align: center;
     font-weight: bold;
@@ -25,9 +24,7 @@
     background-color: #3498DB;
     /* Single color - Blue */
     border-right: 2px solid #fff;
-    /* White border to separate years */
     border-radius: 5px 5px 0 0;
-    /* Rounded corners for a cleaner look */
 }
 
 
