--- a/dev/tiddlers/$__plugins_bangyou_tw-gantt_style_gantt.css
+++ b/dev/tiddlers/$__plugins_bangyou_tw-gantt_style_gantt.css
@@ -16,15 +16,16 @@
 }
 
 .gantt-label {
+    position: absolute;
     flex: 1;
     text-align: center;
     font-weight: bold;
     padding: 10px 0;
     color: white;
     background-color: #3498DB;
-    /* Single color - Blue */
     border-right: 2px solid #fff;
     border-radius: 5px 5px 0 0;
+    transform: translate(-50%, 0); 
 }
 
 
